[package]
name = "tuitr"
version = "0.1.5"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
crossterm = "0.29.0"
ratatui = "0.30.0"
syntect = "5"
ignore = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
notify = "6"
similar = "2"

[dev-dependencies]
tempfile = "3"
